--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static humanize %}
-
+{% block title %} | Welcome {% endblock %}
 {% block content %}
   <!-- Showcase -->
   <section id="showcase">
@@ -70,7 +70,9 @@
       </div>
     </div>
   </section>
-
+    <br/>
+    <!-- Alerts -->
+    {% include 'partials/_alerts.html' %}
   <!-- Listings -->
 
   <section id="listings" class="py-5">
