--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static humanize %}
+{% block title %} | {{ listing.title }} {% endblock %}
 
 {% block content %}
 
@@ -14,6 +15,8 @@
       </div>
     </div>
   </section>
+
+
 
   <!-- Breadcrumb -->
   <section id="bc" class="mt-3">
@@ -31,6 +34,8 @@
       </nav>
     </div>
   </section>
+
+     {% include 'partials/_alerts.html' %}
 
   <!-- Listing -->
   <section id="listing" class="py-4">
@@ -166,18 +171,30 @@
           </button>
         </div>
         <div class="modal-body">
-          <form>
+          <form action="{% url 'contact' %}" method="post">
+              {% csrf_token %}
+              {% if user.is_authenticated %}
+                <input type="hidden" name="user_id" value="{{ user.id }}">
+              {% else %}
+                <input type="hidden" name="user_id" value="0">
+              {% endif %}
+            <input type="hidden" name="realtor_email" value="{{ listing.realtor.email }}">
+            <input type="hidden" name="listing_id" value="{{ listing.id }}">
             <div class="form-group">
               <label for="property_name" class="col-form-label">Property:</label>
-              <input type="text" name="listing" class="form-control" value="{{ listing.title }}" disabled>
+              <input type="text" name="listing" class="form-control" value="{{ listing.title }}" >
             </div>
             <div class="form-group">
               <label for="name" class="col-form-label">Name:</label>
-              <input type="text" name="name" class="form-control" required>
+              <input type="text" name="name" class="form-control"
+                      {% if user.is_authenticated %} value="{{ user.first_name }} {{ user.last_name }}"
+                        {% endif %} required>
             </div>
             <div class="form-group">
               <label for="email" class="col-form-label">Email:</label>
-              <input type="email" name="email" class="form-control" required>
+              <input type="email" name="email" class="form-control"
+                      {% if user.is_authenticated %} value="{{ user.email }}"
+                        {% endif %} required>
             </div>
             <div class="form-group">
               <label for="phone" class="col-form-label">Phone:</label>
