--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load humanize %}
+{% block title %} | Browse Property Listings {% endblock %}
 
 {% block content %}
  <section id="showcase-inner" class="py-5 text-white">
@@ -65,7 +66,7 @@
               <hr>
               <div class="row py-2 text-secondary">
                 <div class="col-12">
-                  <i class="fas fa-user"></i> {{ listings.realtor }}</div>
+                  <i class="fas fa-user"></i> {{ listing.realtor }}</div>
               </div>
               <div class="row text-secondary pb-2">
                 <div class="col-6">
