--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -40,6 +40,27 @@
         </ul>
 
         <ul class="navbar-nav ml-auto">
+           {% if user.is_authenticated %}
+            <li
+            {% if 'dashboard' in request.path %}
+                   class="nav-item active mr-3"
+            {% else %}
+                   class="nav-item  mr-3"
+             {% endif %}
+          >
+            <a class="nav-link" href="{% url 'dashboard' %}">
+               Ваш личный профиль, {{ user.username }}</a>
+          </li>
+             <li class="nav-item mr-3">
+                <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}">
+                    <i class="fas fa-sign-out-alt"></i> Logout
+                </a>
+             <form id="logout" action="{% url 'logout' %}" method="post">
+                 {% csrf_token %}
+                 <input type="hidden">
+             </form>
+             </li>
+            {% else %}
           <li
             {% if 'register' in request.path %}
                    class="nav-item active mr-3"
@@ -62,6 +83,7 @@
 
               Login</a>
           </li>
+        {% endif %}
         </ul>
       </div>
     </div>
